优化抽卡分析界面